--- a/index.Rmd
+++ b/index.Rmd
@@ -1,41 +1,14 @@
 ---
-title: "Using R for data analysis"
+title: "Introduction to Econometrics"
 author: "Nicolás Campos Bijit"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-
-output:
-  bookdown::gitbook:
-    highlight: tango
-    css: style4.css
-    split_by: section
-    config:
-      toc:
-        collapse: section
-        scroll_highlight: yes
-      download: null
-      sharing:
-        github: yes
-        facebook: no
-        twitter: no
-      fontsettings:
-        theme: white
-        family: sans
-        size: 2
-
+description: "Exercises and concepts for introduction econometrics"
 bibliography: references.bib
 biblio-style: apalike
 link-citations: yes
-description: "A book focused on teaching data analysis using R"
 ---
 
-# Introducción 
+# Introduction
 
-These notes are designed for those who want to learn **data analysis tools in R**. They are structured as **lecture-style class notes**, which means they follow a **sequential progression across sessions**. There are basic notes, hopefully useful for an introduction to R coding. 
-
-Over time, these class notes have evolved—and they will continue to do so. They have been enriched thanks to contributions from several people. I am especially grateful to **Camila Vivanco, Diego Menares, Catalina Buzio, Felix Ordoñez and Benjamín Pinto** for their contributions.
-
-In addition, these notes are based on a variety of publicly available materials. Throughout the notes, I provide the corresponding bibliographic references and share free resources for readers who want to deepen or consolidate their knowledge. In many cases, examples have been adapted from these additional sources. I always make an effort to cite sources appropriately, with the goal of respecting original authorship and providing readers with access to valuable references. Please let me know if you find any errors.
-
-For suggestions, questions, or recommendations, feel free to contact me at **[ncamposbijit@gmail.com](mailto:ncamposbijit@gmail.com)**.
-
+These notes have been updated and adapted for the course ECON 326: Introduction to Econometrics II, at the University of British Columbia (UBC), 2026. 
