--- a/tutorial2.Rmd
+++ b/tutorial2.Rmd
@@ -85,7 +85,7 @@ $$
 
 Derive the Slope in Centered Form: 
 
-Substitute $\beta_0 = \bar{Y} - \beta_1 \bar{X}$ into the residual expression:
+Substitute $\beta_0 = \bar{Y} - \beta_1 \bar{X}$ into the residual *expression*:
 
 $$
 Y_i - \beta_0 - \beta_1 X_i = Y_i - (\bar{Y} - \beta_1 \bar{X}) - \beta_1 X_i = (Y_i - \bar{Y}) - \beta_1 (X_i - \bar{X})
@@ -335,7 +335,8 @@ names(df)
 # - prate is the plan participation rate (in percentage points)
 # - mrate is the match rate
 
-mean_prate <- mean(df$prate, na.rm = TRUE)
+mean_prate <- mean(df$3
+                   , na.rm = TRUE)
 mean_mrate <- mean(df$mrate, na.rm = TRUE)
 
 mean_prate
